--- a/camel-website/.gitignore
+++ b/camel-website/.gitignore
@@ -18,6 +18,17 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# firebase
+firebase.json
+.firebaserc
+serviceAccountKey.json
+functions/node_modules
+.firebase
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
